# emper-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
data/github/: 08f9b380-6dcb-4334-be80-763fc133a2b2-asthamohta.md  374280eb-325c-4a92-99c0-520dbac33688-asthamohta.md
izhaar-agents/: .env.example  .gitignore  README.md  pyproject.toml
izhaar-agents/src/: config.py  main.py
izhaar-agents/src/agents/: _client.py  conversation.py  judge.py  profile_builder.py  role_builder.py
izhaar-agents/src/api/: _auth.py  _payloads.py  routes.py
izhaar-agents/src/filters/: pre_filter.py
izhaar-agents/src/integration/: scraper_db.py
izhaar-agents/src/mock_data/: candidates.py  roles.py
izhaar-agents/src/models/: conversation.py  persona.py  verdict.py
izhaar-agents/src/prompts/: ai_chat_history_prompt.py  candidate_persona_prompt.py  claim_merge_prompt.py  judge_prompt.py  profile_builder_prompt.py  role_builder_prompt.py  role_persona_prompt.py  sycophancy_detector_prompt.py
izhaar-agents/src/storage/: db.py
izhaar-agents/static/: index.html
izhaar-agents/tests/: conftest.py  test_agents_key_auth.py  test_chat_history_privacy.py  test_claim_merging.py  test_conversation.py  test_judge.py  test_payload_endpoints.py  test_pre_filter.py  test_profile_builder.py
scripts/: pydriller_analyze.py  requirements-pydriller.txt  run-demo-e2e.ts  seed-demo-candidate.ts  seed-demo-roles.ts
scripts/part2-artifacts/: match-verdicts.json  (+4 more)
src/: middleware.ts
(+86 files in other folders)
